fix: 更新 mermaid.min.js 引用

--- a/basics.html
+++ b/basics.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>基础知识 - 视频处理学习</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
+    <script src="js/mermaid.min.js"></script>
     <script>
         mermaid.initialize({ 
             startOnLoad: true,
