--- a/code.html
+++ b/code.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>代码示例 - 视频处理学习</title>
     <link rel="stylesheet" href="style.css">
-    <script src="https://cdn.jsdelivr.net/npm/mermaid@10/dist/mermaid.min.js"></script>
+    <script src="js/mermaid.min.js"></script>
     <script>mermaid.initialize({startOnLoad:true,theme:'base',themeVariables:{primaryColor:'#667eea',primaryTextColor:'#fff',primaryBorderColor:'#764ba2',lineColor:'#667eea',secondaryColor:'#764ba2',tertiaryColor:'#f0f0f0'}});</script>
 </head>
 <body>
