fix: 修正导航栏分类名称

--- a/basics.html
+++ b/basics.html
@@ -30,7 +30,18 @@
             <nav class="sidebar-nav">
                 <ul class="nav-tree">
                     <li>
-                        <span class="nav-category">基础知识</span>
+                        <span class="nav-category">章节导航</span>
+                        <ul class="sub-nav">
+                            <li><a href="basics.html" class="active">基础知识</a></li>
+                            <li><a href="codec.html">编解码技术</a></li>
+                            <li><a href="ai.html">AI视频处理</a></li>
+                            <li><a href="streaming.html">在线视频</a></li>
+                            <li><a href="tools.html">工具框架</a></li>
+                            <li><a href="code.html">代码示例</a></li>
+                        </ul>
+                    </li>
+                    <li>
+                        <span class="nav-category">本页内容</span>
                         <ul class="sub-nav">
                             <li><a href="#basics-1">视频基本概念</a></li>
                             <li><a href="#basics-2">色彩空间</a></li>
@@ -42,16 +53,6 @@
                             <li><a href="#basics-8">帧类型与GOP</a></li>
                             <li><a href="#basics-9">质量评估</a></li>
                             <li><a href="#basics-10">视频压缩</a></li>
-                        </ul>
-                    </li>
-                    <li>
-                        <span class="nav-category">其他章节</span>
-                        <ul class="sub-nav">
-                            <li><a href="codec.html">编解码技术</a></li>
-                            <li><a href="ai.html">AI视频处理</a></li>
-                            <li><a href="streaming.html">在线视频</a></li>
-                            <li><a href="tools.html">工具框架</a></li>
-                            <li><a href="code.html">代码示例</a></li>
                         </ul>
                     </li>
                 </ul>
