--- a/ai.html
+++ b/ai.html
@@ -30,7 +30,7 @@
             <nav class="sidebar-nav">
                 <ul class="nav-tree">
                     <li>
-                        <span class="nav-category">其他章节</span>
+                        <span class="nav-category">章节导航</span>
                         <ul class="sub-nav">
                             <li><a href="basics.html">基础知识</a></li>
                             <li><a href="codec.html">编解码技术</a></li>
@@ -41,7 +41,7 @@
                         </ul>
                     </li>
                     <li>
-                        <span class="nav-category">AI视频处理</span>
+                        <span class="nav-category">本页内容</span>
                         <ul class="sub-nav">
                             <li><a href="#ai-overview">AI视频技术总览</a></li>
                             <li><a href="#nvc">神经视频编码</a></li>
