--- a/codec.html
+++ b/codec.html
@@ -30,9 +30,10 @@
             <nav class="sidebar-nav">
                 <ul class="nav-tree">
                     <li>
-                        <span class="nav-category">其他章节</span>
+                        <span class="nav-category">章节导航</span>
                         <ul class="sub-nav">
                             <li><a href="basics.html">基础知识</a></li>
+                            <li><a href="codec.html" class="active">编解码技术</a></li>
                             <li><a href="ai.html">AI视频处理</a></li>
                             <li><a href="streaming.html">在线视频</a></li>
                             <li><a href="tools.html">工具框架</a></li>
@@ -40,9 +41,9 @@
                         </ul>
                     </li>
                     <li>
-                        <span class="nav-category">编解码技术</span>
+                        <span class="nav-category">本页内容</span>
                         <ul class="sub-nav">
-                            <li><a href="#codec-compare" class="active">编码标准对比</a></li>
+                            <li><a href="#codec-compare">编码标准对比</a></li>
                             <li><a href="#h264">H.264/AVC</a></li>
                             <li><a href="#h265">H.265/HEVC</a></li>
                             <li><a href="#av1">AV1</a></li>
