--- a/index.html
+++ b/index.html
@@ -11,23 +11,23 @@
 <body>
     <div class="layout-container">
         <aside class="sidebar">
-            <div class="sidebar-header"><h1>VideoLearn</h1></div>
+            <div class="sidebar-header"><h1><a href="index.html" style="color:white;text-decoration:none;">VideoLearn</a></h1></div>
             <nav class="sidebar-nav">
                 <ul class="nav-tree">
-                    <li><span class="nav-category">知识地图</span>
+                    <li><span class="nav-category">章节导航</span>
+                        <ul class="sub-nav">
+                            <li><a href="basics.html">基础知识</a></li>
+                            <li><a href="codec.html">编解码技术</a></li>
+                            <li><a href="ai.html">AI视频处理</a></li>
+                            <li><a href="streaming.html">在线视频</a></li>
+                            <li><a href="tools.html">工具框架</a></li>
+                            <li><a href="code.html">代码示例</a></li>
+                        </ul>
+                    </li>
+                    <li><span class="nav-category">本页内容</span>
                         <ul class="sub-nav">
                             <li><a href="#overview" class="active">技术全景</a></li>
                             <li><a href="#learning-path">学习路径</a></li>
-                        </ul>
-                    </li>
-                    <li><span class="nav-category">章节导航</span>
-                        <ul class="sub-nav">
-                            <li><a href="basics.html">📚 基础知识</a></li>
-                            <li><a href="codec.html">🎬 编解码技术</a></li>
-                            <li><a href="ai.html">🤖 AI视频处理</a></li>
-                            <li><a href="streaming.html">📡 在线视频</a></li>
-                            <li><a href="tools.html">🛠️ 工具框架</a></li>
-                            <li><a href="code.html">💻 代码示例</a></li>
                         </ul>
                     </li>
                 </ul>
