--- a/streaming.html
+++ b/streaming.html
@@ -30,19 +30,20 @@
             <nav class="sidebar-nav">
                 <ul class="nav-tree">
                     <li>
-                        <span class="nav-category">其他章节</span>
+                        <span class="nav-category">章节导航</span>
                         <ul class="sub-nav">
                             <li><a href="basics.html">基础知识</a></li>
                             <li><a href="codec.html">编解码技术</a></li>
                             <li><a href="ai.html">AI视频处理</a></li>
+                            <li><a href="streaming.html" class="active">在线视频</a></li>
                             <li><a href="tools.html">工具框架</a></li>
                             <li><a href="code.html">代码示例</a></li>
                         </ul>
                     </li>
                     <li>
-                        <span class="nav-category">在线视频技术</span>
+                        <span class="nav-category">本页内容</span>
                         <ul class="sub-nav">
-                            <li><a href="#streaming-arch" class="active">流媒体架构</a></li>
+                            <li><a href="#streaming-arch">流媒体架构</a></li>
                             <li><a href="#protocols">流媒体协议</a></li>
                             <li><a href="#live">直播技术</a></li>
                             <li><a href="#vod">点播技术</a></li>
