--- a/tools.html
+++ b/tools.html
@@ -14,18 +14,19 @@
             <div class="sidebar-header"><h1><a href="index.html" style="color:white;text-decoration:none;">VideoLearn</a></h1></div>
             <nav class="sidebar-nav">
                 <ul class="nav-tree">
-                    <li><span class="nav-category">其他章节</span>
+                    <li><span class="nav-category">章节导航</span>
                         <ul class="sub-nav">
                             <li><a href="basics.html">基础知识</a></li>
                             <li><a href="codec.html">编解码技术</a></li>
                             <li><a href="ai.html">AI视频处理</a></li>
                             <li><a href="streaming.html">在线视频</a></li>
+                            <li><a href="tools.html" class="active">工具框架</a></li>
                             <li><a href="code.html">代码示例</a></li>
                         </ul>
                     </li>
-                    <li><span class="nav-category">工具框架</span>
+                    <li><span class="nav-category">本页内容</span>
                         <ul class="sub-nav">
-                            <li><a href="#ffmpeg" class="active">FFmpeg详解</a></li>
+                            <li><a href="#ffmpeg">FFmpeg详解</a></li>
                             <li><a href="#opencv">OpenCV</a></li>
                             <li><a href="#pytorch">PyTorch Video</a></li>
                             <li><a href="#comparison">工具对比</a></li>
