--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <ul class="nav-tree">
                     <li><span class="nav-category">章节导航</span>
                         <ul class="sub-nav">
+                            <li><a href="index.html">主页</a></li>
                             <li><a href="basics.html">基础知识</a></li>
                             <li><a href="codec.html">编解码技术</a></li>
                             <li><a href="ai.html">AI视频处理</a></li>
@@ -161,17 +162,6 @@ flowchart LR
                             <p>Python、Golang视频处理代码示例与开发流程</p>
                             <p style="font-size:0.9em;color:#764ba2;margin-top:10px;">包含流程图与对比框</p>
                         </div>
-                    </div>
-
-                    <div class="knowledge-card" style="margin-top:40px;">
-                        <h4>📊 可视化重构统计</h4>
-                        <ul>
-                            <li><strong>已重构页面</strong>：6个核心页面全部完成</li>
-                            <li><strong>可视化图表</strong>：100+ 个Mermaid图表</li>
-                            <li><strong>对比表格</strong>：30+ 个可视化表格</li>
-                            <li><strong>知识卡片</strong>：20+ 个核心知识总结</li>
-                            <li><strong>学习效率</strong>：知识理解速度提升50%+</li>
-                        </ul>
                     </div>
                 </div>
             </section>
