--- a/ai.html
+++ b/ai.html
@@ -32,6 +32,7 @@
                     <li>
                         <span class="nav-category">章节导航</span>
                         <ul class="sub-nav">
+                            <li><a href="index.html">主页</a></li>
                             <li><a href="basics.html">基础知识</a></li>
                             <li><a href="codec.html">编解码技术</a></li>
                             <li><a href="ai.html" class="active">AI视频处理</a></li>
