fix: 修正 codec.html 中的 mermaid 标签错误

--- a/codec.html
+++ b/codec.html
@@ -306,7 +306,7 @@ graph TB
 
                         <div class="diagram-container">
                             <div class="diagram-title">CTU编码树单元结构</div>
-                            <pre class="mermaid>
+                            <pre class="mermaid">
 graph TB
     A[CTU 64×64] --> B[Cu分割]
     B --> C[CU 32×32]
